version 1.2.6
- add Hodrick-Prescott filter, as hpfilt function in the
  genr command

5/04/2004 version 1.2.5
- fix problem with acf and pacf calculations
- add Prais-Winsten estimator for AR1 models ("pwe" command)
- fix bugs in gretl "graph page"
- fix some translation bugs
- fix headers for compilation on Mac OS X
- fix bug in lmtest option handling
- make Excel importer a little more robust
- bug fix for saving data files with very large number
  of variables (tested with 548)
- bug fix for "diff" and "ldiff" commands with panel data in the
  form of stacked cross-sections
- plain text output: give option of copying as RTF (puts the
  output into Courier New at 9 points)
- in gui, disallow deleting variables when sub-sampled
- setobs command: be more flexible in regard to the format of
  the "startobs" field
- saving text files: try to improve handling of CR/LF
- minor fixes to model printing
- gnuplot fix: make copy-and-paste into Microsoft applications
  work again (this was broken by an MS security update of April
  13, 2004)

3/30/2004 version 1.2.4
- Add ARMAX models: ARMA with exogenous variables
- Add GARCH models, using Fiorentini-Calzolari-Panattoni approach
  (Journal of Applied Econometrics, 1996)
- Add "resample" function to genr, for bootstrapping test
  statistics
- Loops: allow use of a variable name rather than a number to
  control a "number of times" loop
- Fix genr bug: problem with an undefined varname in a lag
  context 
- Fix bug: when saved via the objectname mechanism, arma models
  were appearing both as saved models and as saved text
- Fix bug: autocorrelation test from model window Tests menu
  was broken by new options mechanism
- Fix bug: "--verbose" option for Johansen test was broken
- Fix curious Windows bug: line-endings in scripts were not
  recognized in some cases
- Improve path-searching for data files
- Beef up error-checking on opening of native gretl data files
- Improve error-checking on pvalue command